Fix empty cache entry bug and add test for scanWithoutParsing with no scan annotations
When a file has no scan annotations, an empty string was written to cache.
Reading it back via String#split(";") incorrectly produced [""] instead of an empty list,
causing a blank package name to be registered in ProjectPackageScan.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>